<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addBook">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/newimageViewFotoLibro"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/newTitulo"
                android:hint="@string/nTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="53dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/newimageViewFotoLibro"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/newAutor"
                android:hint="@string/nAutor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorBlue"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/newimageViewFotoLibro"
                app:layout_constraintTop_toBottomOf="@+id/newTitulo" />

            <EditText
                android:id="@+id/newFecha"
                android:hint="@string/nFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/colorBlue"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/newimageViewFotoLibro"
                app:layout_constraintTop_toBottomOf="@+id/newAutor" />

            <EditText
                android:id="@+id/newDescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/nDescripcion"
                android:textColor="@color/colorBlack"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newimageViewFotoLibro" />

            <CheckBox
                android:id="@+id/newDisponible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Disponible"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/newimageViewFotoLibro"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/boton_custom"
                android:text="@string/botonNewBook"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@+id/newDescripcion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newimageViewFotoLibro"
                app:layout_constraintVertical_bias="0.684" />

            <Button
                android:id="@+id/buttonCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/boton_custom"
                android:text="@string/ButtonCancelar"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/buttonAdd"
                app:layout_constraintTop_toTopOf="@+id/buttonAdd" />

            <ImageView
                android:id="@+id/newimageButtonGPS"
                android:layout_width="222dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/Localización"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toEndOf="@+id/nTextLatitud"
                app:layout_constraintTop_toBottomOf="@+id/newFecha"
                app:srcCompat="@android:drawable/ic_menu_myplaces" />

            <TextView
                android:id="@+id/nTextLongitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newimageViewFotoLibro" />

            <TextView
                android:id="@+id/nTextLatitud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/nTextLongitud"
                app:layout_constraintTop_toTopOf="@+id/nTextLongitud" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>